--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="row intro">
         <h1 class="main-heading">Wine Wishlist</h1>
         <h2 class="subheading">Keep track of your favourites!</h2>
-        <img class="wine-glasses" src="../assets/images/wine-glasses-with-hearts-svgrepo-com.svg" alt="Wine glasses clinking and surrounded by hearts">
+        <img class="wine-glasses" src="../assets/images/wine-glasses-with-hearts-svgrepo-com-light.svg" alt="Wine glasses clinking and surrounded by hearts" id="wine-glasses">
       </div>
       <div class="row">
         <h3>My wine wishlist/collection:</h3>
